--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,67 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 100%;
+  }
+  
+  body,
+  html {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+  }
+  
+  body {
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    flex-flow: column;
+    align-content: center;
+    align-items: center;
+    font-family: "Playfair Display", sans-serif;
+    letter-spacing: 1px;
+    color: white;
+    text-align: center;
+  }
+  
+  ::-webkit-scrollbar {
+    height: 5px;
+    width: 5px;
+    margin: 0;
+    padding: 0;
+    display: none;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgba(50,50,50,.6); 
+    border-radius: 5px;
+  }
+
+  app-root {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    flex-flow: column;
+    align-content: center;
+    align-items: center;
+  }
+
+  app-home {
+    height: 100%;
+    width: 70%;
+    max-width: 750px;
+    margin: 0;
+    display: flex;
+    flex-flow: column;
+    align-content: center;
+    align-items: center;
+  }
+
+  @media only screen and (orientation: portrait) {
+    app-home {
+      width: 90%;
+    }
+  }
+  
+  
