--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     </div>
 </div>
 <div id="tables">
-    <p id="caption">Aktív mentés 2020 február 5-től.</p>
+    <p id="caption">Log 2020.02.05-től.</p>
     <div id="toggles">
         <a id="todayBtn" (click)="toggleToday()" [ngClass]="{'active': showToday}">Mai súlyok</a>
         <a id="byDateBtn" (click)="toggleToday()" [ngClass]="{'active': !showToday}">Dátum szerint</a>
@@ -47,3 +47,10 @@
         </table>
     </div>
 </div>
+
+<footer>
+    <div id="copy-right">
+        <p>logic &amp; code by <a href="https://www.tothadi.hu" target="blank">tothadi</a><i class="fa fa-copyright icons"
+            aria-hidden="true"></i>2019-2020<p>
+      </div>
+</footer>
