--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,6 +20,7 @@
                 <tr>
                     <td>Dátum</td>
                     <td>Súly</td>
+                    <td>Rendszám</td>
                 </tr>
             </thead>
             <tbody id="byDateWeights">
@@ -37,6 +38,7 @@
                 <tr>
                     <td>Dátum</td>
                     <td>Súly</td>
+                    <td>Rendszám</td>
                 </tr>
             </thead>
             <tbody id="todayWeights">
