--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,10 @@
 <h1>RDF üzem mérleg</h1>
 <div id="data">
-    <div id="weight">
-        <p>{{weight}} kg</p>
-    </div>
+    <p id="weight">{{weight}} kg</p>
+    <p *ngIf="weight != 0" id="plate">{{plate}}</p>
 </div>
 <div id="tables">
-    <p id="caption">Log 2020.02.05-től.</p>
+    <p id="caption">Log 2020.02.05-től. Rendszámok 2020.02.21-től.</p>
     <div id="toggles">
         <a id="todayBtn" (click)="toggleToday()" [ngClass]="{'active': showToday}">Mai súlyok</a>
         <a id="byDateBtn" (click)="toggleToday()" [ngClass]="{'active': !showToday}">Dátum szerint</a>
@@ -26,8 +25,8 @@
             <tbody id="byDateWeights">
                 <tr *ngFor="let dateWeight of dateWeights">
                     <td>{{dateWeight?.date}}</td>
-                    <td>{{dateWeight?.weight}}</td>                    <td>{{dateWeight?.weight}}</td>
-                    <td>{{dateWeight?.plate}}</td>
+                    <td>{{dateWeight?.weight}}</td>
+                    <td [ngClass]="{'no-plate': todayWeight?.plate === 'nincs rögzítve'}">{{dateWeight?.plate}}</td>
                 </tr>
             </tbody>
         </table>
@@ -45,7 +44,7 @@
                 <tr *ngFor="let todayWeight of todayWeights">
                     <td>{{todayWeight?.date}}</td>
                     <td>{{todayWeight?.weight}}</td>
-                    <td>{{todayWeight?.plate}}</td>
+                    <td [ngClass]="{'no-plate': todayWeight?.plate === 'nincs rögzítve'}">{{todayWeight?.plate}}</td>
                 </tr>
             </tbody>
         </table>
@@ -54,7 +53,7 @@
 
 <footer>
     <div id="copy-right">
-        <p>logic &amp; code by <a href="https://www.tothadi.hu" target="blank">tothadi</a><i class="fa fa-copyright icons"
-            aria-hidden="true"></i>2019-2020<p>
-      </div>
+        <p>logic &amp; code by <a href="https://www.tothadi.hu" target="blank">tothadi</a><i
+                class="fa fa-copyright icons" aria-hidden="true"></i>2019-2020<p>
+    </div>
 </footer>
