--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,9 +2,9 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 5%;
+  margin-top: 3%;
   font-size: 3vh;
-  margin-bottom: 5%;
+  margin-bottom: 3%;
 }
 
 #data {
@@ -14,7 +14,14 @@ h1 {
   height: 10%;
   justify-content: space-around;
   background-color: green;
-  margin-bottom: 2vh;
+  margin-bottom: 1vh;
+}
+
+img {
+  position: absolute;
+  height: 4%;
+  margin-left: 2vh;
+  cursor: pointer;
 }
 
 #weight {
@@ -27,27 +34,17 @@ h1 {
   line-height: 4vh;
 }
 
-#plate {
-  height: 30%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 1vh;
-  line-height: 1vh;
-}
-
 #tables {
-  height: 65vh;
+  height: 68vh;
   margin-bottom: 2vh;
 }
 
-#caption {
+#plate {
   height: 4vh;
   font-size: 2vh;
   padding: 1vh;
   background-color: rgb(2, 29, 2);
-  margin-bottom: 2vh;
+  margin-bottom: 1vh;
 }
 
 #toggles {
@@ -143,21 +140,18 @@ thead, tbody tr {
 }
 
 tr {
-  font-size: 2vh;
+  font-size: 1.8vh;
   height: calc(3vh + 1px);
   border-top: 1px solid green;
   border-collapse: collapse;
 }
 
 td {
-  width: 33.33%;
+  width: 25%;
 }
 
 .no-plate {
   color: red;
-}
-
-.no-plate::before {
 }
 
 footer {
@@ -190,6 +184,9 @@ footer {
 #copy-right a {
   text-decoration: none;
   color: white;
+  height: 1.5vh;
+  width: 100%;
+  padding: 0;
   font-size: 1.5vh;
   font-weight: bold;
 }
